counter-example part1

--- a/access-control/notebooks/access_control.ipynb
+++ b/access-control/notebooks/access_control.ipynb
@@ -60,15 +60,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:09:40.832602Z",
-     "start_time": "2025-11-09T20:09:40.828063Z"
+     "end_time": "2025-11-12T10:57:32.350476Z",
+     "start_time": "2025-11-12T10:57:32.346181Z"
     }
    },
    "source": [
     "from IPython.display import Image"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -78,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:09:43.809606Z",
-     "start_time": "2025-11-09T20:09:43.803225Z"
+     "end_time": "2025-11-12T10:57:32.374602Z",
+     "start_time": "2025-11-12T10:57:32.359932Z"
     }
    },
    "id": "9ef7dfbcef2df5b3",
@@ -91,12 +91,12 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:09:44.713812Z",
-     "start_time": "2025-11-09T20:09:44.690714Z"
+     "end_time": "2025-11-12T10:57:32.623826Z",
+     "start_time": "2025-11-12T10:57:32.598717Z"
     }
    },
    "id": "9a7e9f92cf9bf0ca",
@@ -119,12 +119,12 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -139,13 +139,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:09:46.354160Z",
-     "start_time": "2025-11-09T20:09:46.342859Z"
+     "end_time": "2025-11-12T10:57:32.645793Z",
+     "start_time": "2025-11-12T10:57:32.636920Z"
     }
    },
    "id": "2ce9ee58059243a3",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -153,13 +153,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:13:41.876857Z",
-     "start_time": "2025-11-09T20:13:41.871823Z"
+     "end_time": "2025-11-12T10:57:32.683277Z",
+     "start_time": "2025-11-12T10:57:32.659782Z"
     }
    },
    "id": "a9c42c8962ab26dd",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -176,13 +176,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:13:42.517447Z",
-     "start_time": "2025-11-09T20:13:42.511914Z"
+     "end_time": "2025-11-12T10:57:32.711139Z",
+     "start_time": "2025-11-12T10:57:32.705138Z"
     }
    },
    "id": "f715b54644efb0e",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -193,8 +193,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:24.033228Z",
-     "start_time": "2025-11-09T20:13:43.399233Z"
+     "end_time": "2025-11-12T10:58:38.612202Z",
+     "start_time": "2025-11-12T10:57:32.727268Z"
     }
    },
    "id": "7abc826de099d8a0",
@@ -203,26 +203,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000000/1000000 [01:40<00:00, 9939.63it/s]"
+      " 53%|█████▎    | 534648/1000000 [01:05<00:56, 8193.91it/s] \n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frequency of number of free servers: [1.28588e-01 2.31436e-01 2.71748e-01 2.10151e-01 1.09928e-01 3.83880e-02\n",
-      " 8.43500e-03 1.20600e-03 1.01000e-04 1.60000e-05 3.00000e-06]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[7], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Differential semi-gradient SARSA\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43mdifferential_semi_gradient_sarsa\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvalue_function\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmax_steps\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\Desktop\\ReinforcementLearning\\access-control\\src\\access_control.py:294\u001B[0m, in \u001B[0;36mdifferential_semi_gradient_sarsa\u001B[1;34m(value_function, max_steps)\u001B[0m\n\u001B[0;32m    291\u001B[0m freq[current_free_servers] \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m    293\u001B[0m \u001B[38;5;66;03m# take an action at current state\u001B[39;00m\n\u001B[1;32m--> 294\u001B[0m new_free_servers, new_priority, reward \u001B[38;5;241m=\u001B[39m \u001B[43mtake_action\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcurrent_free_servers\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcurrent_priority\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcurrent_action\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    296\u001B[0m \u001B[38;5;66;03m# get a new action\u001B[39;00m\n\u001B[0;32m    297\u001B[0m new_action \u001B[38;5;241m=\u001B[39m get_action(new_free_servers, new_priority, value_function)\n",
+      "File \u001B[1;32m~\\Desktop\\ReinforcementLearning\\access-control\\src\\access_control.py:90\u001B[0m, in \u001B[0;36mtake_action\u001B[1;34m(free_servers, priority, action)\u001B[0m\n\u001B[0;32m     87\u001B[0m busy_servers \u001B[38;5;241m=\u001B[39m number_of_servers \u001B[38;5;241m-\u001B[39m free_servers\n\u001B[0;32m     88\u001B[0m free_servers \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mrandom\u001B[38;5;241m.\u001B[39mbinomial(n\u001B[38;5;241m=\u001B[39mbusy_servers, p\u001B[38;5;241m=\u001B[39mprobability_free)\n\u001B[1;32m---> 90\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m free_servers, \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrandom\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mchoice\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpriorities\u001B[49m\u001B[43m)\u001B[49m, reward\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -233,7 +231,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:24.099102Z",
+     "end_time": "2025-11-12T10:58:38.690633300Z",
      "start_time": "2025-11-09T20:15:24.095143Z"
     }
    },
@@ -254,7 +252,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:29.717290Z",
+     "end_time": "2025-11-12T10:58:38.692649500Z",
      "start_time": "2025-11-09T20:15:29.710214Z"
     }
    },
@@ -272,7 +270,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:30.363777Z",
+     "end_time": "2025-11-12T10:58:38.694634Z",
      "start_time": "2025-11-09T20:15:30.339782Z"
     }
    },
@@ -300,7 +298,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:31.224814Z",
+     "end_time": "2025-11-12T10:58:38.714645300Z",
      "start_time": "2025-11-09T20:15:31.216918Z"
     }
    },
@@ -318,7 +316,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:31.803051Z",
+     "end_time": "2025-11-12T10:58:38.717887300Z",
      "start_time": "2025-11-09T20:15:31.793203Z"
     }
    },
@@ -349,7 +347,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:32.397032Z",
+     "end_time": "2025-11-12T10:58:38.720885500Z",
      "start_time": "2025-11-09T20:15:32.382059Z"
     }
    },
@@ -380,7 +378,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:33.698272Z",
+     "end_time": "2025-11-12T10:58:38.722944600Z",
      "start_time": "2025-11-09T20:15:33.688222Z"
     }
    },
@@ -399,7 +397,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:35.124328Z",
+     "end_time": "2025-11-12T10:58:38.724929900Z",
      "start_time": "2025-11-09T20:15:34.938079Z"
     }
    },
@@ -427,7 +425,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-09T20:15:36.096925Z",
+     "end_time": "2025-11-12T10:58:38.726885600Z",
      "start_time": "2025-11-09T20:15:35.721229Z"
     }
    },
