counter-example part2

--- a/counter-examples/notebooks/bairds_counterexample.ipynb
+++ b/counter-examples/notebooks/bairds_counterexample.ipynb
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.293210Z",
-     "start_time": "2025-11-12T11:04:13.287721Z"
+     "end_time": "2025-11-30T14:03:40.038517Z",
+     "start_time": "2025-11-30T14:03:40.030738Z"
     }
    },
    "source": [
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.339697Z",
-     "start_time": "2025-11-12T11:04:13.302113Z"
+     "end_time": "2025-11-30T14:03:40.096735Z",
+     "start_time": "2025-11-30T14:03:40.063512Z"
     }
    },
    "id": "ffbfd3903170cefa",
@@ -113,8 +113,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.548937Z",
-     "start_time": "2025-11-12T11:04:13.539507Z"
+     "end_time": "2025-11-30T14:03:40.913695Z",
+     "start_time": "2025-11-30T14:03:40.899540Z"
     }
    },
    "id": "e7c69155a14c898d",
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.608651Z",
-     "start_time": "2025-11-12T11:04:13.581465Z"
+     "end_time": "2025-11-30T14:03:41.011839Z",
+     "start_time": "2025-11-30T14:03:40.975464Z"
     }
    },
    "id": "eecb67c628a679e3",
@@ -160,8 +160,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.635360Z",
-     "start_time": "2025-11-12T11:04:13.625134Z"
+     "end_time": "2025-11-30T14:03:41.089138Z",
+     "start_time": "2025-11-30T14:03:41.073227Z"
     }
    },
    "id": "82d39d520adef34",
@@ -187,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.684645Z",
-     "start_time": "2025-11-12T11:04:13.661661Z"
+     "end_time": "2025-11-30T14:03:41.190809Z",
+     "start_time": "2025-11-30T14:03:41.170383Z"
     }
    },
    "id": "24fbcd8988000e0b",
@@ -216,8 +216,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.712745Z",
-     "start_time": "2025-11-12T11:04:13.707226Z"
+     "end_time": "2025-11-30T14:03:41.307325Z",
+     "start_time": "2025-11-30T14:03:41.302146Z"
     }
    },
    "id": "85f05bf88a5a5760",
@@ -236,8 +236,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.732119Z",
-     "start_time": "2025-11-12T11:04:13.726778Z"
+     "end_time": "2025-11-30T14:03:41.340179Z",
+     "start_time": "2025-11-30T14:03:41.334929Z"
     }
    },
    "id": "57435bc12da48fad",
@@ -256,8 +256,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.763133Z",
-     "start_time": "2025-11-12T11:04:13.756196Z"
+     "end_time": "2025-11-30T14:03:41.380844Z",
+     "start_time": "2025-11-30T14:03:41.372832Z"
     }
    },
    "id": "43a31b90b1e06724",
@@ -278,8 +278,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.823570Z",
-     "start_time": "2025-11-12T11:04:13.774139Z"
+     "end_time": "2025-11-30T14:03:41.448845Z",
+     "start_time": "2025-11-30T14:03:41.400375Z"
     }
    },
    "id": "15fb8794905f16a2",
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 39569.28it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 47614.93it/s]\n"
      ]
     }
    ],
@@ -304,8 +304,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.847894Z",
-     "start_time": "2025-11-12T11:04:13.837615Z"
+     "end_time": "2025-11-30T14:03:41.539182Z",
+     "start_time": "2025-11-30T14:03:41.525709Z"
     }
    },
    "id": "accfbd86217c309c",
@@ -323,8 +323,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.879985Z",
-     "start_time": "2025-11-12T11:04:13.862918Z"
+     "end_time": "2025-11-30T14:03:41.589914Z",
+     "start_time": "2025-11-30T14:03:41.575916Z"
     }
    },
    "id": "9a5e779f54b6c84c",
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1dfcf1c40>"
+       "<matplotlib.legend.Legend at 0x1f93a6b12e0>"
       ]
      },
      "execution_count": 12,
@@ -360,8 +360,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.921353Z",
-     "start_time": "2025-11-12T11:04:13.900924Z"
+     "end_time": "2025-11-30T14:03:41.650074Z",
+     "start_time": "2025-11-30T14:03:41.632755Z"
     }
    },
    "id": "b557bb1e792eaecd",
@@ -389,8 +389,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.962708Z",
-     "start_time": "2025-11-12T11:04:13.956711Z"
+     "end_time": "2025-11-30T14:03:41.703653Z",
+     "start_time": "2025-11-30T14:03:41.698847Z"
     }
    },
    "id": "34a1ab1bc4edf7ba",
@@ -412,8 +412,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:13.985500Z",
-     "start_time": "2025-11-12T11:04:13.979239Z"
+     "end_time": "2025-11-30T14:03:41.732872Z",
+     "start_time": "2025-11-30T14:03:41.726705Z"
     }
    },
    "id": "b3123ec68f0ea818",
@@ -434,8 +434,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:14.125739Z",
-     "start_time": "2025-11-12T11:04:14.000748Z"
+     "end_time": "2025-11-30T14:03:41.885510Z",
+     "start_time": "2025-11-30T14:03:41.812637Z"
     }
    },
    "id": "50ef71cba6546368",
@@ -444,7 +444,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 8792.92it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 15385.34it/s]\n"
      ]
     }
    ],
@@ -460,8 +460,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:14.151431Z",
-     "start_time": "2025-11-12T11:04:14.139935Z"
+     "end_time": "2025-11-30T14:03:41.948044Z",
+     "start_time": "2025-11-30T14:03:41.937044Z"
     }
    },
    "id": "ceb1e392860631bb",
@@ -479,8 +479,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:14.178114Z",
-     "start_time": "2025-11-12T11:04:14.163687Z"
+     "end_time": "2025-11-30T14:03:42.010574Z",
+     "start_time": "2025-11-30T14:03:41.994056Z"
     }
    },
    "id": "956dcf4dd8f8ab01",
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1dfd67830>"
+       "<matplotlib.legend.Legend at 0x1f93a3b0410>"
       ]
      },
      "execution_count": 18,
@@ -507,8 +507,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-11-12T11:04:14.734205Z",
-     "start_time": "2025-11-12T11:04:14.190229Z"
+     "end_time": "2025-11-30T14:03:42.841709Z",
+     "start_time": "2025-11-30T14:03:42.093688Z"
     }
    },
    "id": "8cc897fc4f616424",
